@@ -303,15 +303,20 @@ endif (QJSON_FOUND)
 
 # QJSon and MusicBrainz require exceptions to be enabled!
 if (MUSICBRAINZ5_FOUND OR NOT ENABLE_QT5)
-    if (CMAKE_COMPILER_IS_GNUCXX)
-       add_definitions("-fexceptions -UQT_NO_EXCEPTIONS")
-    endif (CMAKE_COMPILER_IS_GNUCXX)
-    if (CMAKE_C_COMPILER MATCHES "icc")
-        add_definitions(-fexceptions)
-    endif (CMAKE_C_COMPILER MATCHES "icc")
-    if (MSVC)
-       add_definitions(-EHsc)
-    endif (MSVC)
+    message("-- Enabling exceptions")
+    if (ENABLE_KDE)
+        add_definitions(${KDE4_ENABLE_EXCEPTIONS})
+    else (ENABLE_KDE)
+        if (CMAKE_COMPILER_IS_GNUCXX)
+            add_definitions("-fexceptions -UQT_NO_EXCEPTIONS")
+        endif (CMAKE_COMPILER_IS_GNUCXX)
+        if (CMAKE_C_COMPILER MATCHES "icc")
+            add_definitions(-fexceptions)
+        endif (CMAKE_C_COMPILER MATCHES "icc")
+        if (MSVC)
+            add_definitions(-EHsc)
+        endif (MSVC)
+    endif (ENABLE_KDE)
 endif (MUSICBRAINZ5_FOUND OR NOT ENABLE_QT5)
 
 include_directories(${CMAKE_SOURCE_DIR}/3rdparty ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QTINCLUDES} ${ZLIB_INCLUDE_DIRS})
